# ApiCodec

./: BuildVersion.hpp  CMakeLists.txt  README.md
modules/: Helpers.cmake
src/: BuildVersion.hpp
src/ApiCodec/: ApiAutoStatusPacket.cpp  ApiCameraExtrinsicsPacket.cpp  ApiCameraIntrinsicsPacket.cpp  ApiCameraIntrinsicsPacket.hpp  ApiCommandPacket.cpp  ApiEnumResponsePacket.cpp  ApiGprsPacket.cpp  ApiGpsPacket.hpp  ApiIhmAskValuePacket.cpp  ApiLogToRobotPacket.cpp  ApiMessagePacket.hpp  ApiMoveActuatorPacket.cpp  ApiPostPacket.cpp  ApiPressedIhmButtonPacket.cpp  ApiPressedIhmButtonPacket.hpp  ApiRunPlotPacket.cpp  ApiRunPlotPacket.hpp  ApiStereoCameraPacket.cpp  BaseNaio01Packet.cpp  HaActuatorPacket.cpp  HaDS4RemotePacket.cpp  HaLedPacket.cpp  HaLidarPacket.cpp  HaMagnetoPacket.cpp  HaOdoPacket.cpp  HaScreenPacket.cpp  Naio01Codec.cpp  Naio01Codec.hpp
src/packet/: ApiCameraExtrinsicsPacket.hpp  ApiCameraIntrinsicsPacket.cpp  ApiCommandPacket.hpp  ApiGpsPacket.cpp  ApiGpsPacket.hpp  ApiIhmAskEnumPacket.cpp  ApiIhmDisplayPacket.cpp  ApiLidarPacket.cpp  ApiMessagePacket.cpp  ApiMotorsPacket.cpp  ApiPostPacket.hpp  ApiSmsPacket.cpp  ApiStatusPacket.cpp  ApiStatusPacket.hpp  ApiStereoCameraPacket.cpp  ApiStereoCameraPacket.hpp  ApiValueResponsePacket.cpp  ApiWatchdogPacket.cpp  BaseNaio01Packet.hpp  HaAcceleroPacket.cpp  HaCanPacket.cpp  HaGpsPacket.cpp  HaGyroPacket.cpp  HaKeypadPacket.cpp  HaLidarPacket.cpp  HaMotorsPacket.cpp  HaSpeakerPacket.cpp
src/vitals/: CLBaseException.cpp  CLBaseException.h  CLBuffer.cpp  CLBuffer.hpp  CLByteConversion.h  CLException.cpp  CLException.h  CLTypes.h  Format.hpp  Macros.hpp  Print.hpp  Types.h  Utils.cpp  Utils.hpp
